chore: update nav and fix padding on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,72 @@
+@import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800');
+
 html, body {
+  font-family: 'Dosis', sans-serif;
+  font-weight: 300;
   margin: 0;
   padding: 0;
-  font-family: 'Helvetica Neue', sans-serif;
-  color: #333;
-  background-color: #f9f9f9;
-  height: 100%;
+  box-sizing: border-box;
 }
 
-nav {
-  top: 0;
-  left: 0;
+.header {
   width: 100%;
+  border-bottom: 1px solid #ebebeb;
+  text-align: right;
+  position: relative;
   display: flex;
-  justify-content: center;
-  padding: 0.75em;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-bottom: 1px;
-  border-color: #7c7c7c;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
 }
 
-nav ul {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+.logo {
+  font-size: 28px;
+  font-weight: 100;
+  padding: 10px;
 }
 
-nav a {
-  color: #333;
+.menu {
+  display: flex;
+  align-items: center;
+  margin-right: 50px;
+}
+
+.link {
+  padding: 15px 20px;
   text-decoration: none;
-  margin: 0 1em;
-  padding: 0.5em;
-  font-weight: 500;
-  transition: color 0.3s ease, background-color 0.3s ease;
+  text-transform: uppercase;
+  color: #0f0f0f;
+  font-weight: 800;
+  font-size: 20px;
+  position: relative;
 }
 
-nav a:hover {
-  background-color: rgba(0, 123, 255, 0.1);
-  border-radius: 4px;
+.link::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: black;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  transform: translateY(5px);
+  transition: opacity 300ms, transform 300ms;
+}
+
+.link:hover::after {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@media (max-width: 768px) {
+  section {
+    padding: 16px;
+    box-sizing: border-box;
+  }
+
+  h1, p {
+    padding: 0 10px;
+  }
 }
